[gd_scene load_steps=5 format=3 uid="uid://cwtxxxhlmsx4m"]

[ext_resource type="Script" path="res://Sub Scenes/Rig_Momma_Bird/rig_momma_bird.gd" id="1_ebopd"]
[ext_resource type="Script" path="res://Sub Scenes/Rig_Momma_Bird/character_momma.gd" id="2_dikm0"]
[ext_resource type="Texture2D" uid="uid://2i2bfbkgi8uu" path="res://Visuals/Art Assets/draft_ai_older_bird.png" id="4_qkod7"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_okuqj"]
radius = 57.0
height = 264.0

[node name="rig_momma_bird" type="Node2D"]
script = ExtResource("1_ebopd")

[node name="roost_target" type="Node2D" parent="."]
position = Vector2(0, -250)

[node name="fly_off_target" type="Node2D" parent="."]
position = Vector2(0, 700)

[node name="character_momma" type="CharacterBody2D" parent="."]
position = Vector2(0, -500)
collision_mask = 0
motion_mode = 1
script = ExtResource("2_dikm0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="character_momma"]
shape = SubResource("CapsuleShape2D_okuqj")

[node name="bird_detector_area" type="Area2D" parent="character_momma" groups=["momma"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="character_momma/bird_detector_area"]
shape = SubResource("CapsuleShape2D_okuqj")

[node name="momma_body" type="Sprite2D" parent="character_momma"]
position = Vector2(-1, -23)
rotation = -3.14112
scale = Vector2(0.190925, 0.177028)
skew = -0.000340462
texture = ExtResource("4_qkod7")
region_enabled = true
region_rect = Rect2(108.607, 803.968, 1849.38, 1215.2)

[node name="momma_head" type="Sprite2D" parent="character_momma/momma_body"]
position = Vector2(0, -717.4)
scale = Vector2(1.1029, 0.977738)
texture = ExtResource("4_qkod7")
region_enabled = true
region_rect = Rect2(723.061, -8.19658, 606.936, 806.654)

[connection signal="toggle_fly" from="." to="character_momma" method="_on_rig_momma_bird_toggle_fly"]
